<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activites.Program_Details_Activity">

    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="20dp"
            android:text="The Desire Loans Partner Program"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textStyle="normal"
            android:text="@string/dezire_loan"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textStyle="normal"
            android:text="@string/dezire_loan1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="20dp"
            android:text="@string/partner_why"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/points"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="•Flexible Work Timings"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="•Attractive earning Opportunity"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="•No Investment Required"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="•No Office Required"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="•No Employees Required"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="20dp"
            android:text="@string/who"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/who_can"/>


    </LinearLayout>

</ScrollView>